--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     />
   </head>
   <body>
+    <!-- navigation menu -->
     <nav>
       <div class="logo">Marriott Bonvoy</div>
       <a
@@ -29,7 +30,7 @@
         close
       </a>
     </nav>
-
+    <!-- modal that toggles on pressing the hamburger menu -->
     <div class="modal hidden" id="modal">
       <a href="">Rooms</a>
       <a href="">Offers</a>
@@ -37,6 +38,7 @@
       <button class="book">Book Now</button>
     </div>
 
+    <!-- hero section -->
     <div class="hero">
       <h1>CourtYard By Marriott</h1>
       <div class="selector">
@@ -57,6 +59,7 @@
       </div>
     </div>
 
+    <!-- hotel amenities -->
     <h2 class="services_heading" id="services_title">Hotel Amenities</h2>
     <h3 class="services_heading" id="amenities_heading">
       Discover a world of premier amenities,<br />
@@ -120,6 +123,7 @@
       ></iframe>
     </div>
 
+    <!-- Room types -->
     <div class="Room_details">
       <h2>Discover Our Wide range of rooms</h2>
       <p>
@@ -151,6 +155,7 @@
       </div>
     </div>
 
+    <!-- footer -->
     <footer class="footer">
       <div class="container">
         <div class="logo_icons">
@@ -177,10 +182,6 @@
           <a href="#">Support</a>
           <a href="#">Privacy Policy</a>
         </div>
-
-        <!-- <div class="footer__cta">
-          <a href="#" class="button">Book Now</a>
-        </div> -->
 
         <div class="footer__copyright">
           &copy; Marriott Bonvoy. All Rights Reserved.
